--- a/app/assets/stylesheets/staff_homes.scss
+++ b/app/assets/stylesheets/staff_homes.scss
@@ -1,3 +1,3 @@
-// Place all the styles related to the StaffAcademicCalendars controller here.
+// Place all the styles related to the StaffHomes controller here.
 // They will automatically be included in application.css.
 // You can use Sass (SCSS) here: http://sass-lang.com/
