--- a/app/views/admin_operate_teachers/show.html.erb
+++ b/app/views/admin_operate_teachers/show.html.erb
@@ -1,2 +1,7 @@
-<h1>AdminOperateTeachers#show</h1>
-<p>Find me in app/views/admin_operate_teachers/show.html.erb</p>
+<h1>教員を登録しました</h1>
+<div>
+
+    <p>メールアドレス：<%= @teacher.email %></p>
+    <p>教員名：<%= @teacher.name %></p></p>
+</div>
+
