--- a/app/views/admin_operate_staffs/index.html.erb
+++ b/app/views/admin_operate_staffs/index.html.erb
@@ -1,2 +1,16 @@
-<h1>AdminOperateStaffs#index</h1>
-<p>Find me in app/views/admin_operate_staffs/index.html.erb</p>
+<h1>事務員一覧</h1>
+<table>
+    <thead>
+        <tr>
+            <th>メールアドレス</th>
+        </tr>
+    </thead>
+    <tbody>
+        <% @staffs.each do |s| %>
+        <tr>
+            <td><%= s.email %></td>
+            <td><%= link_to 'Destroy', admin_operate_staff_path(s.id), method: :delete, data: {confirm: "Are you sure?"}%></td>
+        </tr>
+        <% end %>
+    </tbody>
+</table>
