--- a/app/views/admin_operate_teachers/index.html.erb
+++ b/app/views/admin_operate_teachers/index.html.erb
@@ -1,2 +1,18 @@
-<h1>AdminOperateTeachers#index</h1>
-<p>Find me in app/views/admin_operate_teachers/index.html.erb</p>
+<h1>教員一覧</h1>
+<table>
+    <thead>
+        <tr>
+            <th>教員名</th>
+            <th>メールアドレス</th>
+        </tr>
+    </thead>
+    <tbody>
+        <% @teachers.each do |t| %>
+        <tr>
+            <td><%= t.name %></td>
+            <td><%= t.email %></td>
+            <td><%= link_to 'Destroy', admin_operate_teacher_path(t.id), method: :delete, data: {confirm: "Are you sure?"}%></td>
+        </tr>
+        <% end %>
+    </tbody>
+</table>
