--- a/app/views/staff_homes/index.html.erb
+++ b/app/views/staff_homes/index.html.erb
@@ -1,2 +1,6 @@
-<h1>StaffHomes#index</h1>
-<p>Find me in app/views/staff_homes/index.html.erb</p>
+<h1>事務員機能一覧</h1>
+  <%= button_to "講義登録", {controller: 'staff_operate_lectures', action: 'new'}, {method: :get, class: "btn btn-default"}%>
+  <%= button_to "講義バックアップ", {controller: 'staff_operate_lectures', action: 'backup'}, {method: :get, class: "btn btn-default"}%>
+  <%= button_to "講義検索", {controller: 'staff_operate_lectures', action: 'index'}, {method: :get, class: "btn btn-default"}%>
+  <%= button_to "学年暦登録", {controller: 'staff_academic_calendars', action: 'new'}, {method: :get, class: "btn btn-default"}%>
+  <%= button_to "学年暦表示・削除", {controller: 'staff_academic_calendars', action: 'index'}, {method: :get, class: "btn btn-default"}%>
