--- a/app/views/student_homes/index.html.erb
+++ b/app/views/student_homes/index.html.erb
@@ -1,2 +1,102 @@
-<h1>StudentHomes#index</h1>
-<p>Find me in app/views/student_homes/index.html.erb</p>
+﻿<h1>Student's Home Page</h1>
+<p>
+	<div class="container">
+		<div class="row">
+			<div class="col-md-6">
+				<table class="table table-bordered">
+					<thead>
+						<tr>
+							<td>月</td>
+							<td>火</td>
+							<td>水</td>
+							<td>木</td>
+							<td>金</td>
+							<td>土</td>
+						</tr>
+					</thead>
+					<tbody>
+						<tr>
+							<td></td>
+							<td></td>
+							<td></td>
+							<td></td>
+							<td></td>
+							<td></td>
+						</tr>
+					</tbody>
+						<tr>
+							<td></td>
+							<td></td>
+							<td></td>
+							<td></td>
+							<td></td>
+							<td></td>
+						</tr>
+					</tbody>
+						<tr>
+							<td></td>
+							<td></td>
+							<td></td>
+							<td></td>
+							<td></td>
+							<td></td>
+						</tr>
+					</tbody>
+						<tr>
+							<td></td>
+							<td></td>
+							<td></td>
+							<td></td>
+							<td></td>
+							<td></td>
+						</tr>
+					</tbody>
+						<tr>
+							<td></td>
+							<td></td>
+							<td></td>
+							<td></td>
+							<td></td>
+							<td></td>
+						</tr>
+					</tbody>
+				</table>
+				<div class="row">
+					<div class="col-md-6">
+						集中講義
+					</div>
+					<div class="col-md-6">
+						<table class="table table-bordered">
+							<thead>
+								<tr>
+									<td></td>
+								</tr>
+							</thead>
+							<tbody>
+								<tr>
+									<td></td>
+								</tr>
+							</tbody>
+						</table>
+					</div>
+				</div>
+			</div>
+			
+			<div class="col-md-1">
+				<div class="row">
+					<button type="button" class="btn btn-default" onClick="location.href='student_intensive_lectures'">一般講義登録</button>
+					<button type="button" class="btn btn-default">集中講義登録</button>
+					<button type="button" class="btn btn-default">集中講義取り消し</button>
+				</div>
+				<div class="row">
+					<br>
+					<br>
+					<br>
+					<br>
+					<br>
+					<button type="button" class="btn btn-default" onClick="location.href='login'">ログアウト</button>
+				</div>
+			</div>
+		</div>
+	</div>
+</p>
