--- a/app/views/staff_operate_lectures/index.html.erb
+++ b/app/views/staff_operate_lectures/index.html.erb
@@ -1,4 +1,13 @@
 <h1>講義一覧と検索</h1>
+<div class="search">
+<%= form_tag search_staff_operate_lectures_path,method: :get do %>
+  学部:<%= text_field_tag :faculty,params[:faculty] %>
+  学科:<%= text_field_tag :department,params[:department] %>
+  検索ワード:<%= text_field_tag :search,params[:search] %>
+  <%= submit_tag "Go!" %>
+<%end%>
+</div>
+<!--検索窓-->
 <table class='table'>
   <thead class="thead-inverse">
     <tr>
