--- a/app/views/admin_homes/index.html.erb
+++ b/app/views/admin_homes/index.html.erb
@@ -6,4 +6,4 @@
 
 <p><%= link_to "事務員の表示・削除", {controller: "admin_operate_staffs", action: "index"}, class: "btn btn-lg btn-outline-secondary" %></p>
 
-<p><%= link_to "パスワード変更", {controller: "admin_operate_teachers", action: "new"}, class: "btn btn-lg btn-outline-secondary" %></p>
+<p><%= link_to "パスワード変更", edit_admin_registration_path, class: "btn btn-lg btn-outline-secondary" %></p>
