--- a/app/views/devise/registrations/edit.html.erb
+++ b/app/views/devise/registrations/edit.html.erb
@@ -1,4 +1,4 @@
-<h2>Edit <%= resource_name.to_s.humanize %></h2>
+<h2>パスワード変更 <%= resource_name.to_s.humanize %></h2>
 
 <%= form_for(resource, as: resource_name, url: admin_registration_path, html: { method: :put }) do |f| %>
   <%= devise_error_messages! %>
