--- a/app/views/staff_operate_lectures/index.html.erb
+++ b/app/views/staff_operate_lectures/index.html.erb
@@ -1,8 +1,8 @@
 <h1>講義一覧と検索</h1>
 <div class="search">
 <%= form_tag search_staff_operate_lectures_path,method: :get do %>
-  学部:<%= select_tag :faculty,options_for_select(FACULTY), :include_blank => true %>
-  学科:<%= select_tag :faculty,options_for_select(DEPARTMENT), :include_blank => true %>
+  学部:<%= select_tag :faculty,options_for_select(FACULTY), :include_blank => true  %>
+  学科:<%= select_tag :department,options_for_select(DEPARTMENT), :include_blank => true   %>
   検索ワード:<%= text_field_tag :search,params[:search] %>
   <%= submit_tag "Go!" %>
 <%end%>
