--- a/app/views/welcom/home.html.erb
+++ b/app/views/welcom/home.html.erb
@@ -15,6 +15,6 @@
 </p>
 
 <p>
-    <a class="btn btn-lg btn-primary" href="/admin/rogin" role="button" id="connect-button">事務員の入口</a>
+    <a class="btn btn-lg btn-primary" href="/admin/rogin" role="button" id="connect-button">管理者の入口</a>
 </p>
 
