学年暦登録 datepicker未実装 小泉くんに原因調査依頼中

--- a/app/views/staff_academic_calendars/index.html.erb
+++ b/app/views/staff_academic_calendars/index.html.erb
@@ -1,2 +1,5 @@
-<h1>StaffAcademicCalendars#index</h1>
-<p>Find me in app/views/staff_academic_calendars/index.html.erb</p>
+<h1>学年暦一覧表示</h1>
+<%if @calendars.nil?%>
+<%else%>
+<h1>ここに学年暦一覧が表示されます。</h1>
+<%end%>
