--- a/app/views/staff_academic_calendars/new.html.erb
+++ b/app/views/staff_academic_calendars/new.html.erb
@@ -1,2 +1,12 @@
-<h1>StaffAcademicCalendars#new</h1>
-<p>Find me in app/views/staff_academic_calendars/new.html.erb</p>
+<h1>学年暦新規登録</h1>
+<%=form_for @calendars,url:'staff_academic_calendars'  do |f| %>
+  日付:<%= f.text_field :no_lecture_date,id: 'datepicker' %>
+  <%= f.submit '送信' %>
+<%end%>
+
+<script type = 'text/javascript'>
+$(document).ready(function() {
+    var dateFormat = 'yy-mm-dd'
+  $("#datepicker").datepicker();
+});
+</script>
