--- a/app/views/staff_operate_lectures/index.html.erb
+++ b/app/views/staff_operate_lectures/index.html.erb
@@ -7,7 +7,7 @@
   <%= submit_tag "Go!" %>
 <%end%>
 </div>
-<!--検索窓-->
+<!--/検索窓-->
 <table class='table'>
   <thead class="thead-inverse">
     <tr>
