ログアウト追加

--- a/app/views/admin_homes/index.html.erb
+++ b/app/views/admin_homes/index.html.erb
@@ -7,3 +7,5 @@
 <p><%= link_to "事務員の表示・削除", {controller: "admin_operate_staffs", action: "index"}, class: "btn btn-lg btn-outline-secondary" %></p>
 
 <p><%= link_to "パスワード変更", edit_admin_registration_path, class: "btn btn-lg btn-outline-secondary" %></p>
+
+<p><%= link_to "ログアウト", destroy_admin_session_path, class: "btn btn-lg btn-outline-secondary" %></p>
