管理者教員登録画面を変更

--- a/app/views/admin_homes/index.html.erb
+++ b/app/views/admin_homes/index.html.erb
@@ -8,4 +8,4 @@
 
 <p><%= link_to "パスワード変更", edit_admin_registration_path, class: "btn btn-lg btn-outline-secondary" %></p>
 
-<p><%= link_to "ログアウト", destroy_admin_session_path, class: "btn btn-lg btn-outline-secondary" %></p>
+<p><%= link_to "ログアウト", destroy_admin_session_path, class: "btn btn-outline-secondary" %></p>
