事務員 講義一括登録　バリデーション

--- a/app/views/staff_operate_lectures/index.html.erb
+++ b/app/views/staff_operate_lectures/index.html.erb
@@ -1,13 +1,16 @@
 <h1>講義一覧と検索</h1>
 <div class="search">
 <%= form_tag search_staff_operate_lectures_path,method: :get do %>
-  学部:<%= select_tag :faculty,options_for_select(FACULTY), :include_blank => true  %>
-  学科:<%= select_tag :department,options_for_select(DEPARTMENT), :include_blank => true   %>
+  学部:<%= select_tag :faculty,options_for_select(FACULTY,:selected => params[:faculty]), prompt: '選択してください。' %>
+  学科:<%= select_tag :department,options_for_select(DEPARTMENT,:selected => params[:department]), prompt: '選択してください。' %>
   検索ワード:<%= text_field_tag :search,params[:search] %>
   <%= submit_tag "Go!" %>
 <%end%>
 </div>
 <!--/検索窓-->
+<%if @lectures.count == 0 %>
+  <h1>該当する講義が見つかりませんでした。</h1>
+<%else%>
 <table class='table'>
   <thead class="thead-inverse">
     <tr>
@@ -29,6 +32,7 @@
      <td><%= lecture.day %></td>
      <td><%= lecture.period %></td>
    </tr>
+   <%end%>
    <%end%>
  </tbody>
 </table>
