ちょっとホーム画面のレイアウトを変えた

--- a/app/views/welcom/home.html.erb
+++ b/app/views/welcom/home.html.erb
@@ -1,20 +1,100 @@
-<h1>授業わかるんシステムへようこそ</h1>
 
 
-<p>
-    <a class="btn btn-lg btn-primary" href="<%= @login_url %>" role="button" id="connect-button">学生の入口</a>
+<div class = "welcom_home_wrapper">
+<div class = "welcom_home_left">
+</div>
+
+<div class = "welcom_home_center">
+
+
+<div class = "welcom_home_center_1">
+
+<img src="/assets/start_image.jpg" width = "300" height = "250"></img>
+
+</div>
+
+<div class = "welcom_home_center_2">
+<p class = "student_enter">
+    <a href="<%= @login_url %>" role="button"><img src="/assets/startStudent2.png" width = "200" height ="40"></img></a>
+</p>
+
+<p class = "teacher_enter">
+    <a href="<%= @login_url %>" role="button"><img src="/assets/Teacher.png" width = "200" height = "40"></img></a>
+</p>
+
+<p class = "staff_enter">
+    <a href="<%= @login_url %>" role="button"><img src="/assets/startStaff2.png" width = "200" height = "40"></img></a>
+</p>
+
+<p class = "admin_enter">
+    <a class="btn btn-lg btn-primary" href="/admin/rogin" role="button" id="connect-button">Entrance For Admin</a>
 </p>
 
 
-<p>
-    <a class="btn btn-lg btn-primary" href="<%= @login_url %>" role="button" id="connect-button">教員の入口</a>
-</p>
+</div>
+</div>
+
+<div class = "welcom_home_right">
+</div>
+
+</div>
+
+<div class = "welcom_home_bottom_wrapper">
+<div class = "welcom_home_bottom_left"></div>
+<div class = "welcom_home_bottom_center">
 
 <p>
-    <a class="btn btn-lg btn-primary" href="<%= @login_url %>" role="button" id="connect-button">事務員の入口</a>
+■ 当サイトをご利用いただくにあたって
+<br><br><br>
+● 推奨ブラウザ
+<br><br>
+当サイトは、以下のブラウザで動作確認をしております。その他のブラウザにつきましては動作保証いたしません。
+<br>
+<br>
+<br>
+・InternetExplorer 8.0/9.0 (Windows版）<br>
+・FireFox14.0.1 (Windows版）<br>
+・FireFox14.0.1 (MacOS版）<br>
+・Safari5.1.7 (MacOS版）
+<br>
+<br>
+<br>
+<br>
+
+● ブラウザの設定
+<br>
+<br>
+下記の設定にて動作確認しております。その他の設定につきましては動作保証いたしません。<br>
+・ブラウザのJavaScript機能が有効であること。
+<br>
+<br>
+<br>
+● プラグイン
+<br>
+<br>
+当サイトの一部ページでは以下のプラグインを使用しております。<br>
+・Adobe Reader・・・各種帳票の閲覧
+<br>
+<br>
+<br>
+
+Adobe ReaderはAdobe社のウェブサイトより無料でダウンロードできます。
+<br>
+<br>
+<br>
+
+● 戻るボタン等について
+<br>
+<br>
+当サイトでは、戻るボタンに相当するキー制御を行った際の不具合については保証いたしかねます。<br>
+戻るボタンに相当するキー制御は行わないようにしてください。<br>
+<br>
+<br>
+
 </p>
 
-<p>
-    <a class="btn btn-lg btn-primary" href="/admin/rogin" role="button" id="connect-button">管理者の入口</a>
-</p>
 
+</div>
+<div class = "welcom_home_bottom_right"></div>
+
+</div>
