--- a/app/assets/stylesheets/welcom.scss
+++ b/app/assets/stylesheets/welcom.scss
@@ -1,3 +1,50 @@
 // Place all the styles related to the Welcom controller here.
 // They will automatically be included in application.css.
 // You can use Sass (SCSS) here: http://sass-lang.com/
+
+
+div.welcom_home_wrapper{
+    display: flex;
+}
+
+div.welcom_home_left{
+    flex:0.3;
+}
+
+div.welcom_home_center{
+    display: flex;
+    flex:0.4;
+
+}
+
+div.welcom_home_center_1{
+    flex:0.6
+}
+div.welcom_home_center_2{
+    flex:0.4
+}
+
+div.welcom_home_right{
+    flex:0.3;
+}
+
+p.admin_enter{
+    width:250;
+    height:40
+}
+
+div.welcom_home_bottom_wrapper{
+    display:flex;
+}
+
+div.welcom_home_bottom_left{
+    flex:0.3;
+}
+div.welcom_home_bottom_center{
+    flex:0.4;
+        font-size: 6px;
+        text-align:left;
+}
+div.welcom_home_bottom_right{
+    flex:0.3;
+}
