kaminariページネーション実装

--- a/app/views/staff_operate_lectures/index.html.erb
+++ b/app/views/staff_operate_lectures/index.html.erb
@@ -15,6 +15,7 @@
   <thead class="thead-inverse">
     <tr>
       <th>講義名</th>
+      <th>講義タイプ</th>
       <th>教員名</th>
       <th>曜日</th>
       <th>限</th>
@@ -24,6 +25,7 @@
     <% @lectures.each do |lecture|%>
    <tr>
      <td><%= lecture.name %></td>
+     <td><%= convert_intensive_tag lecture.is_intensive %></td>
      <td>
        <% lecture.teachers.each do |a| %>
          <%= a.name%>
@@ -36,3 +38,4 @@
    <%end%>
  </tbody>
 </table>
+<%= paginate @lectures %>
