事務員　講義一括登録 教員を元に登録

--- a/app/views/staff_academic_calendars/new.html.erb
+++ b/app/views/staff_academic_calendars/new.html.erb
@@ -19,3 +19,8 @@ $(document).ready(function() {
   $("#datepicker").datepicker();
 });
 </script>
+
+<p>Hello World!</p>
+<script type="text/javascript">
+$("p").css("color", "red");
+</script>
