--- a/app/views/admin_operate_teachers/show.html.erb
+++ b/app/views/admin_operate_teachers/show.html.erb
@@ -10,5 +10,11 @@
     </tbody>
 </table>
 
-<%= link_to "続けて登録", new_admin_operate_teacher_path, class: "btn btn-outline-secondary"%>
-<%= link_to "管理者ホーム戻る", admin_homes_path, class: "btn btn-outline-secondary"%>
+<div class="form-inline">
+    <div>
+        <%= link_to "続けて登録", new_admin_operate_teacher_path, class: "btn btn-outline-secondary"%>
+    </div>
+    <div style="padding-left:100px">
+        <%= link_to "管理者ホーム戻る", admin_homes_path, class: "btn btn-outline-secondary"%>
+    </div>
+</div>
