--- a/app/views/welcom/home.html.erb
+++ b/app/views/welcom/home.html.erb
@@ -27,7 +27,7 @@
 </p>
 
 <p class = "admin_enter">
-    <a class="btn btn-lg btn-primary" href="/admin/rogin" role="button" id="connect-button">Entrance For Admin</a>
+    <a class="btn btn-lg btn-primary" href="/admin_homes" role="button" id="connect-button">Entrance For Admin</a>
 </p>
 
 
