--- a/app/views/admin_operate_staffs/new.html.erb
+++ b/app/views/admin_operate_staffs/new.html.erb
@@ -3,8 +3,10 @@
 
 <% if @staff.errors.any? %>
 <div>
-    <% @staff.errors.full_messages.each do |msg| %>
-        <p><%= msg %></p>
+    <% @staff.errors.messages.values.each do |msg| %>
+        <% msg.each do |m| %>
+        <li><%= m %></li>
+        <% end %>
     <% end %>
 </div>
 <% end%>
@@ -14,6 +16,7 @@
         既に事務員は登録されているため新たに登録することができませんでした。<br />
         ※新たに登録する場合既に登録されている事務員を削除してから行ってください。
     </p>
+    <%= link_to "戻る", admin_homes_path, class: "btn btn-outline-secondary"%>
 <% else %>
     <div>
         <%= f.label "メールアドレス" %><br />
@@ -21,13 +24,14 @@
     </div>
 
     <br />
-    <div>
-            <%= f.submit "OK", class: "btn btn-outline-secondary", data: {confirm: "登録しますか?"}%>
+    <div class="form-inline">
+        <div>
+            <%= f.submit "OK", class: "btn btn-outline-secondary"%>
+        </div>
+        <div style="padding-left:50px">
+            <%= link_to "戻る", admin_homes_path, class: "btn btn-outline-secondary"%>
+        </div>
     </div>
 <% end %>
-<br />
-<div>
-    <%= link_to "戻る", :back, class: "btn btn-outline-secondary"%>
-</div>
 
 <% end %>
