--- a/app/views/admin_operate_teachers/index.html.erb
+++ b/app/views/admin_operate_teachers/index.html.erb
@@ -12,7 +12,7 @@
         <tr>
             <td><%= t.name %></td>
             <td><%= t.email %></td>
-            <td><%= link_to 'Destroy', admin_operate_teacher_path(t.id), method: :delete, class: "btn btn-danger", data: {confirm: "削除しますか?"}%></td>
+            <td><%= link_to 'Destroy', admin_operate_teacher_path(t.id), method: :delete, class: "btn btn-danger"%></td>
         </tr>
         <% end %>
     </tbody>
