講義ダウンロード画面作成

--- a/app/views/staff_operate_lectures/backup.html.erb
+++ b/app/views/staff_operate_lectures/backup.html.erb
@@ -1,2 +1,3 @@
 <h1>事務員　講義バックアップ</h1>
-<%= button_to '講義バックアップ',action: :download %>
+<%= button_to '講義バックアップ',{action: :download}, class: "btn btn-outline-secondary" %>
+<br />
