--- a/app/views/staff_operate_lectures/backup.html.erb
+++ b/app/views/staff_operate_lectures/backup.html.erb
@@ -1,2 +1,13 @@
-<h1>事務員　講義バックアップ</h1>
-<%= button_to '講義バックアップ',action: :download %>
+<div id = 'staff'>
+  <div id = 'contents'>
+<h3>講義バックアップ:</h3>
+<div class = 'margin_area'>
+<div class = 'form_area'>
+<div class = 'backup'>
+  <%= button_to 'バックアップ開始',{action: :download},{class:'btn btn-primary', role:'button'} %>
+</div>
+<!--end of backup-->
+</div>
+</div>
+  </div>
+</div>
