--- a/app/views/layouts/staff_base.html.erb
+++ b/app/views/layouts/staff_base.html.erb
@@ -15,8 +15,10 @@
     <div class="alert alert-danger" role="alert"><%= flash[:alert] %></div>
     <%end%>
     <%= yield %>
+    <div id = 'fotter'>
     <% if is_need_backpath? %>
-      <%= link_to '事務員ホームへ戻る', staff_homes_path %>
+      <p><%= link_to '戻る', staff_homes_path,class: 'btn btn-primary', role:'button' %></p>
     <%end%>
+  </div>
   </body>
 </html>
