--- a/app/views/staff_academic_calendars/index.html.erb
+++ b/app/views/staff_academic_calendars/index.html.erb
@@ -1,4 +1,8 @@
+<div id = 'staff'>
+  <div id = 'contents'>
 <h1>学年暦一覧表示</h1>
+<div class = 'margin_area'>
+<div class = 'form_area'>
 <table class='table'>
   <thead class="thead-inverse">
     <tr>
@@ -16,3 +20,9 @@
    <%end%>
  </tbody>
 </table>
+</div>
+</div>
+</div>
+<!--end of contents-->
+</div>
+<!--end of staff-->
