事務員　細かい部分修正

--- a/app/views/staff_academic_calendars/new.html.erb
+++ b/app/views/staff_academic_calendars/new.html.erb
@@ -16,7 +16,7 @@
   <p>日付名:<%= f.text_field :date_name %></p>
 </div>
 </div>
-<div class = 'submit'><%= f.submit 'OK' ,class: 'btn btn-primary', role:'button'%></div>
+<div class = 'submit'><%= f.submit 'OK',　class: 'btn btn-primary', role:'button',data: { confirm: "学年暦を登録しますか？"}%></div>
 <%end%>
 </div>
 <!--end of contents-->
