事務員　エラー画面　編集

--- a/app/views/staff_operate_lectures/new.html.erb
+++ b/app/views/staff_operate_lectures/new.html.erb
@@ -8,7 +8,7 @@
 </div>
 </div>
   <div class = 'submit'>
-    <%= submit_tag "アップロード",class: 'btn btn-primary', role:'button',data: { confirm: "講義を登録してもよろしいですか？"} %>
+    <%= submit_tag "アップロード",class: 'btn btn-primary', role:'button', :onclick => "return confirm('講義を登録してもよろしいですか？')" %>
   </div>
 <% end %>
 </div>
