--- a/app/views/student_lectures/new.html.erb
+++ b/app/views/student_lectures/new.html.erb
@@ -7,15 +7,14 @@
 			<%= button_to "ダウンロード", {controller: 'student_lectures', action: 'download_excel'}, {method: :get, class: "btn btn-default"} %>
 		</div>
 		<div class="row">
-		    <form class="form-inline">
-		        <div class="form-group">
-    	       		<input type="text" name="file" class="form-control" placeholder="ファイル名">
-    	       	</div>
-    	    </form>
-			<button type="button" class="btn btn-default">ファイル選択</button>
+				<%= form_tag '/student_lectures', method: 'post', multipart: true do %>
+			    <label>エクセルファイルのアップロード：</label>
+			    <br>
+			    <%= file_field :student_lecture, :file %>
+			    <%= submit_tag 'アップロード' %>
+				<% end %>
 		</div>
 		<div class="row">
-			<button type="button" class="btn btn-default">アップロード</button>
 			<%= button_to "戻る", {controller: 'student_homes', action: 'index'}, {method: :get, class: "btn btn-default"}%>
 		</div>
 	</div>
