各種エラー処理改良

--- a/app/views/errors/error_500.html.erb
+++ b/app/views/errors/error_500.html.erb
@@ -1,1 +1,10 @@
-<h1>講義の登録に失敗しました。</h1>
+<div id = 'staff'>
+  <div id = 'contents'>
+        <h1>講義の登録に失敗しました。</h1>
+<div class = 'margin_area'>
+  <div class = 'form_area'>
+    <p>＊ファイルに不正な値がないか確認してください。</p>
+  </div>
+</div>
+</div>
+</div>
