--- a/app/views/teacher_reports/index.html.erb
+++ b/app/views/teacher_reports/index.html.erb
@@ -1,2 +1,16 @@
-<h1>TeacherReports#index</h1>
-<p>Find me in app/views/teacher_reports/index.html.erb</p>
+<h1>レポート一覧</h1>
+<div class="container">
+  <div class="row">
+    <div class="col-md-12">
+      レポート一覧:
+    </div>
+  </div>
+  <div class="row">
+    <div class="col-md-9">
+      
+    </div>
+    <div class="col-md-3">
+      <%= button_to "戻る", {controller:'teacher_homes', action:'index'}, {method: :get, class: "btn btn-default"} %>
+    </div>
+  </div>
+</div>
