--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -9,6 +9,9 @@
   </head>
 
   <body>
+    <% if flash[:notice].present?%>
+    <div class="alert alert-success" role="alert"><%= flash[:notice] %></div>
+    <%end%>
     <%= yield %>
   </body>
 </html>
