--- a/app/views/auth/login_error.html.erb
+++ b/app/views/auth/login_error.html.erb
@@ -1,3 +1,3 @@
 <p>本システムに登録されていないメールアドレスです。</p>
 <p>管理者に問い合わせください</p>
-<%= link_to 'HOME', '../welcom/home' %>
+<%= link_to 'TOP', '../welcom/home' %>
