--- a/app/views/staff_academic_calendars/index.html.erb
+++ b/app/views/staff_academic_calendars/index.html.erb
@@ -1,10 +1,10 @@
 <div id = 'staff'>
   <div id = 'contents'>
-<h1>学年暦一覧表示</h1>
+<h3>学年暦一覧:</h3>
 <div class = 'margin_area'>
 <div class = 'form_area'>
   <% if @calendars.count <= 0 %>
-  <h1>学年暦が登録されていません。</h1>
+  <h3>学年暦が登録されていません。</h3>
   <%else%>
 <table class='table'>
   <thead class="thead-inverse">
@@ -18,11 +18,12 @@
    <tr>
      <td><%= calendar.no_lecture_date %></td>
      <td><%= calendar.date_name %></td>
-     <td><%= button_to '削除',{action: :destroy,id: calendar.id},method: :delete %></td>
+     <td><%= button_to '削除',{action: :destroy,id: calendar.id},method: :delete,class: 'btn btn-danger' %></td>
    </tr>
    <%end%>
  </tbody>
 </table>
+<div class = 'pagenate_area'><%= paginate @calendars %></div>
 <%end%>
 </div>
 </div>
