--- a/app/views/welcom/home.html.erb
+++ b/app/views/welcom/home.html.erb
@@ -9,92 +9,33 @@
 
 <div class = "welcom_home_center_1">
 
-<img src="/assets/start_image.jpg" width = "300" height = "250"></img>
 
 </div>
 
 <div class = "welcom_home_center_2">
-<p class = "student_enter">
-    <a href="<%= @login_url %>" role="button"><img src="/assets/startStudent2.png" width = "200" height ="40"></img></a>
-</p>
-
-<p class = "teacher_enter">
-    <a href="<%= @login_url %>" role="button"><img src="/assets/Teacher.png" width = "200" height = "40"></img></a>
-</p>
-
-<p class = "staff_enter">
-    <a href="<%= @login_url %>" role="button"><img src="/assets/startStaff2.png" width = "200" height = "40"></img></a>
-</p>
-
-<p class = "admin_enter">
-    <a class="btn btn-lg btn-primary" href="/admin_homes" role="button" id="connect-button">Entrance For Admin</a>
-</p>
 
 
 </div>
 </div>
 
 <div class = "welcom_home_right">
-</div>
 
-</div>
-
-<div class = "welcom_home_bottom_wrapper">
-<div class = "welcom_home_bottom_left"></div>
-<div class = "welcom_home_bottom_center">
-
-<p>
-■ 当サイトをご利用いただくにあたって
-<br><br><br>
-● 推奨ブラウザ
-<br><br>
-当サイトは、以下のブラウザで動作確認をしております。その他のブラウザにつきましては動作保証いたしません。
-<br>
-<br>
-<br>
-・InternetExplorer 8.0/9.0 (Windows版）<br>
-・FireFox14.0.1 (Windows版）<br>
-・FireFox14.0.1 (MacOS版）<br>
-・Safari5.1.7 (MacOS版）
-<br>
-<br>
-<br>
-<br>
-
-● ブラウザの設定
-<br>
-<br>
-下記の設定にて動作確認しております。その他の設定につきましては動作保証いたしません。<br>
-・ブラウザのJavaScript機能が有効であること。
-<br>
-<br>
-<br>
-● プラグイン
-<br>
-<br>
-当サイトの一部ページでは以下のプラグインを使用しております。<br>
-・Adobe Reader・・・各種帳票の閲覧
-<br>
-<br>
-<br>
-
-Adobe ReaderはAdobe社のウェブサイトより無料でダウンロードできます。
-<br>
-<br>
-<br>
-
-● 戻るボタン等について
-<br>
-<br>
-当サイトでは、戻るボタンに相当するキー制御を行った際の不具合については保証いたしかねます。<br>
-戻るボタンに相当するキー制御は行わないようにしてください。<br>
-<br>
-<br>
-
+<p class = "student_enter">
+    <%= link_to "学生用入り口",@login_url  %>
 </p>
 
+<p class = "teacher_enter">
+    <%= link_to "教員用入り口",@login_url  %>
+</p>
 
+<p class = "staff_enter">
+    <%= link_to "事務員用入り口",@login_url  %>
+</p>
+
+<p class = "admin_enter">
+    <%= link_to "管理者用入り口","/admin_homes"  %>
+
+</p>
 </div>
-<div class = "welcom_home_bottom_right"></div>
 
 </div>
